// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeButton should display with custom callback 1`] = `
<div
  class="button-class"
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <button
      class="upgradeButton sm invertedColors btn btn-outline-warning"
      type="button"
    >
      <span
        class="mr-2 upgradeLabel sm"
      >
        a label
      </span>
      <img
        alt="upgrade-icon"
        class="upgradeIcon sm"
        src="test-file-stub"
      />
    </button>
  </div>
</div>
`;

exports[`UpgradeButton should display with custom props 1`] = `
<div
  class="button-class"
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <a
      to="[object Object]"
    >
      <button
        class="upgradeButton sm invertedColors btn btn-outline-warning"
        type="button"
      >
        <span
          class="mr-2 upgradeLabel sm"
        >
          a label
        </span>
        <img
          alt="upgrade-icon"
          class="upgradeIcon sm"
          src="test-file-stub"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`UpgradeButton should display with default props 1`] = `
<div
  class=""
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <a
      to="[object Object]"
    >
      <button
        class="upgradeButton btn btn-outline-warning"
        type="button"
      >
        <span
          class="mr-2 upgradeLabel"
        >
          Upgrade
        </span>
        <img
          alt="upgrade-icon"
          class="upgradeIcon"
          src="test-file-stub"
        />
      </button>
    </a>
  </div>
</div>
`;
